--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -15,3 +15,6 @@
 @import 'parts/storeOwnerDashboard';
 @import 'parts/storeOwnerNewstore';
 @import 'parts/storeOwnerNewproduct';
+
+@import 'parts/productReviews';
+@import 'parts/storeReviews';
