--- a/views/storeOwnerUpdatestore.pug
+++ b/views/storeOwnerUpdatestore.pug
@@ -1,6 +1,6 @@
 extends base
 block content
-    include _sidebar
+    include sidebarEditarloja
     .newStoreDashboard__container
         section.newStoreDashboard
             .newStoreDashboard__item
