--- a/public/sass/_base.scss
+++ b/public/sass/_base.scss
@@ -33,6 +33,8 @@ grey 2: #989c94
    --color-gold-light: rgb(255, 230, 89);
    --color-gold-strong: rgb(192, 163, 0);
 
+   --color-tick: rgb(83, 216, 83);
+
    --color-salmon: salmon;
    --color-salmon-light: rgb(255, 164, 154);
    --color-salmon-strong: rgb(218, 93, 79);
@@ -80,6 +82,8 @@ $color-login: #ff6f87;
 $color-gold: rgb(255, 215, 0);
 $color-gold-light: rgb(255, 230, 89);
 $color-gold-strong: rgb(192, 163, 0);
+
+$color-tick: rgb(83, 216, 83);
 
 $color-salmon: salmon;
 $color-salmon-light: rgb(255, 164, 154);
