--- a/views/newProduct.pug
+++ b/views/newProduct.pug
@@ -1,7 +1,7 @@
 extends base
 
 block content
-    include _sidebar
+    include sidebarAdicionarproduto
     .produtoDashboard__container
         section.produtoDashboard
             .produtoDashboard__item
