--- a/views/sidebarAdicionarproduto.pug
+++ b/views/sidebarAdicionarproduto.pug
@@ -16,13 +16,5 @@
           svg.side-nav__icon
             use(xlink:href='/imagens/dev/sprite.svg#icon-tag')
           span Categorias
-    if (url === '/minhaslojas') && numLojas < 3
-      a.side-nav__criarLoja(href='/criarLoja')
-        svg.side-nav__icon
-          use(xlink:href='/imagens/dev/sprite.svg#icon-plus-square')
-        span Criar Loja
-    else
-      button.side-nav__aviso
-        svg.side-nav__icon
-          use(xlink:href='/imagens/dev/sprite.svg#icon-info')
-        span limite 3 lojas
+    a.img__link(href=`/loja/${loja.id}/produtos`)
+        img.side-nav__store__img(src=`/imagens/dev/lojas/${loja.imagemDeCapa}` alt='')
