--- a/views/storeOwnerUpdateproduct.pug
+++ b/views/storeOwnerUpdateproduct.pug
@@ -1,7 +1,7 @@
 extends base
 
 block content
-    include _sidebar
+    include sidebarEditarproduto
     .produtoDashboard__container
         section.produtoDashboard
             .produtoDashboard__item
