--- a/public/sass/_base.scss
+++ b/public/sass/_base.scss
@@ -161,9 +161,10 @@ body {
    font-weight: 400;
    line-height: 1.6;
    color: var(--grey-color);
-   background-color: var(--color-main-back);
+   background-color: var(--color-white);
    background-size: cover;
    background-repeat: no-repeat;
+   height: 100vh;
 }
 
 a {
