--- a/public/sass/parts/_header.scss
+++ b/public/sass/parts/_header.scss
@@ -11,6 +11,7 @@
    align-items: center;
    position: fixed;
    box-shadow: 1px 2px 1px 1px rgba(0, 0, 0, 0.103);
+   //display: none;
 }
 
 ////////////////////////////////////////
