--- a/views/base.pug
+++ b/views/base.pug
@@ -27,7 +27,7 @@ html(lang='en')
         //Footer
         //include _footer 
         script(src='/js/bundle.js')
-        script(src="/js/chatClient.js")
+        script(src="/js/chat/clientChat.js")
 
 
         //- script(src='/js/userLogin.js')
