--- a/public/sass/_base.scss
+++ b/public/sass/_base.scss
@@ -161,7 +161,7 @@ body {
    font-weight: 400;
    line-height: 1.6;
    color: var(--grey-color);
-   background-color: var(--color-white);
+   background-color: var(--color-main-back);
    background-size: cover;
    background-repeat: no-repeat;
    height: 100vh;
